Fixed and aligned social media placement to mirror quali spacing -- not at all elegant, given it's hobbled together with position. But oh well.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -631,6 +631,8 @@ h4{
 }
 
 #socialMediaTag{
+    position: relative;
+    top: -95px;
     grid-row: 4;
     grid-column: 1;
 }
@@ -648,7 +650,7 @@ h4{
     display: grid;
     grid-row: 4;
     position: relative;
-    top: -20px;
+    top: -40px;
     grid-column: 1;
     padding: 1rem;
     margin: -1rem;
